--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,20 @@
 {
   "compilerOptions": {
-    "target": "es2020",
-    "module": "nodenext",
+    "target": "es2022",
+    "module": "esnext",
     "strict": true,
     "esModuleInterop": true,
+    "moduleResolution": "node",
+    "allowImportingTsExtensions": true,
+    "verbatimModuleSyntax": false,
+    "noEmit": true,
     "skipLibCheck": true,
-    "outDir": "./dist",
-    "rootDir": "./src",
-    "removeComments": true,
-    "sourceMap": true
+    "noFallthroughCasesInSwitch": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   },
-  "include": ["src/**/*"],
+  "include": ["**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules", "dist"]
 }
