--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "type": "module",
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "nodemon": "^3.1.11",
     "prisma": "^7.2.0",
     "ts-node": "^10.9.2",
@@ -27,6 +28,7 @@
     "@prisma/client": "^7.2.0",
     "@types/express": "^5.0.6",
     "@types/node": "^25.0.9",
+    "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "zod": "^4.3.5"
